# webview

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  binding.d.ts  binding.js  build.rs  bunfig.toml  index.d.ts  index.js  js-bindings.d.ts  js-bindings.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  lint.yml
__test__/: bridge.test.mjs  high_level.test.ts  index.spec.ts  webview.test.mjs  webview.test.ts
cli/: build.mjs  index.mjs  utils.mjs
docs/: CLOSING_GUIDE.md  CNAME  README.md
docs/api/: application.md  browser-window.md  menu.md  notification.md  tray.md  types.md  web-context.md  webview.md
docs/getting-started/: event-loop.md  installation.md  quick-start.md
docs/guides/: building-executables.md  cookies-and-storage.md  custom-protocols.md  ipc-messaging.md  menus.md  multiple-windows.md
docs/platform/: android.md  ios.md  linux.md  macos.md  windows.md
examples/: application-events.mjs  autoplay.ts  basic-webview-example.ts  basic-window-example.ts  close-example.mjs  close-example.ts  custom-protocol-hono.mjs  custom-protocol.mjs  expose.mjs  html.js  html.mjs  html.ts  ipc-example.ts  logger.ts  menu-system.mjs  multi-view-window-example.ts  multi-webview.mjs  multi-webview.ts  multiple.mjs  multiple.ts  navigation-handler.mjs  notification.mjs  premium-dashboard-example.ts  simple.mjs  transparency.ts  transparency_helper.ts  transparent.mjs  transparent.ts  tray.mjs  undecorated.mjs  url.mjs  url.ts  utils.ts  web-context.mjs  webview-events.mjs  webview-html-content-example.ts  webview-url-load-example.ts  window-management.ts  window-menus.mjs
examples/http/: server.mjs  webview.mjs  webview.mts
lib/: index.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  (+1 more)
scripts/: build.js  postbuild.js
src/: app.rs  browser_window.rs  freebsd_stub.rs  high_level.rs  lib.rs  menu.rs  notifications.rs  tray.rs  tray_stub.rs  types.rs  version.rs  web_context.rs  webview.rs  win32_resize.rs
(+31 files in other folders)
