[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "webview"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.8.2", default-features = true, features = ["napi9"] }
napi-derive = "3.5.1"
winit       = { version = ">=0.30,<0.31", features = ["android-native-activity"] }
wry         = { version = "0.53.5", features = ["devtools", "fullscreen"] }
dpi         = "0.1"
serde_json  = "1"
image = "0.25.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd  = "0.15.4"
muda = { version = "0.17", features = ["libxdo"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
